frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itunes-gr-frontend
  labels:
    owner : Semyon_Goryunov
spec:
  selector:
    matchLabels:
      app: itunes-gr-frontend
  template:
    metadata:
      labels:
        app: itunes-gr-frontend
    spec:
      containers:
      - name: itunes-gr-frontend
        image: sgoryunov/frontend:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 15
          timeoutSeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        # ports:
        #   - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "200m"
