frontend/ingress_nlb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-itunes-gr
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # projectcontour.io/response-timeout: infinity
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    # nginx.ingress.kubernetes.io/app-root: /prod
    # nginx.ingress.kubernetes.io/use-regex: "true"

spec:
  # ingressClassName: nginx
  tls:
  - hosts:
    - prod.itunes-gr.ru
    secretName: tls-secret
  rules:
    - host: prod.itunes-gr.ru
      http:
        paths:
        # - path: /prod(/|$)(.*)
        - path: /
          pathType: Prefix
          backend:
            service:
              name: itunes-gr-frontend
              port:
                number: 80
